<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchJob"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".JobSearch">

    <TextView
        android:id="@+id/searchJobHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search Job"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/searchEmployerEmail"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        android:hint="Employer Email"
        android:visibility="visible"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchJobHeader"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/searchJobTitle"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:hint="Job Title"
        android:visibility="visible"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEmployerEmail"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/searchDescription"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:hint="Description"
        android:inputType="text"
        android:visibility="visible"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/searchJobHeader"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/searchHourlyRate"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:hint="Hourly Rate"
        android:inputType="numberDecimal"
        android:visibility="visible"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchDescription"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <Button
        android:id="@+id/searchJobButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="508dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="Search Job!"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchJobRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintBottom_toTopOf="@+id/searchJobButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchHourlyRate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:itemCount="10"
        android:visibility="visible"
        tools:listitem="@layout/job_layout"
        />


</androidx.constraintlayout.widget.ConstraintLayout>